--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,6 @@ GROQ_API_KEY=
 # You only need this environment variable set if you want to use HuggingFace models
 HuggingFace_API_KEY=
 
-
 # Get your Open AI API Key by following these instructions -
 # https://help.openai.com/en/articles/4936850-where-do-i-find-my-openai-api-key
 # You only need this environment variable set if you want to use GPT models
@@ -70,13 +69,23 @@ LMSTUDIO_API_BASE_URL=
 # You only need this environment variable set if you want to use xAI models
 XAI_API_KEY=
 
+# Get your Perplexity API Key from https://docs.perplexity.ai/docs/getting-started
+# You only need this environment variable set if you want to use Perplexity models
+PERPLEXITY_API_KEY=
+
 # Include this environment variable if you want more logging for debugging locally
 VITE_LOG_LEVEL=debug
 
 # Example Context Values for qwen2.5-coder:32b
-# 
+#
 # DEFAULT_NUM_CTX=32768 # Consumes 36GB of VRAM
 # DEFAULT_NUM_CTX=24576 # Consumes 32GB of VRAM
 # DEFAULT_NUM_CTX=12288 # Consumes 26GB of VRAM
 # DEFAULT_NUM_CTX=6144 # Consumes 24GB of VRAM
 DEFAULT_NUM_CTX=
+
+# Azure OpenAI Configuration
+# Format: resourcename:apikey
+# Example: my-resource:00000000000000000000000000000000
+# You only need this environment variable set if you want to use Azure OpenAI models
+AZURE_KEY_RESOURCENAME=
