--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "ai": "^3.4.33",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "diff": "^5.2.0",
     "file-saver": "^2.0.5",
